# NSEssentials

./: CMakeLists.txt  LICENSE  README.md
include/nsessentials/: NSELibrary.h
include/nsessentials/data/: FileHelper.h  Parallelization.h  PersistentIndexContainer.h  Serialization.h
include/nsessentials/gui/: AbstractViewer.h  Camera.h  GLBuffer.h  GLShader.h  GLVertexArray.h
include/nsessentials/math/: BoundingBox.h  FastTrigonometry.h  LeastSquaresSystem.h  LeastSquaresSystem.inl  MixedIntegerGreedyRounding.h  Morton.h  ParallelCG.h  QuadraticEnergy.h
include/nsessentials/util/: Circulator.h  FlatteningIterator.h  GLDebug.h  IndentationLog.h  IteratorRange.h  MathematicaFormatter.h  Observer.h  TimedBlock.h  Timer.h  UnionFind.h
src/data/: FileHelper.cpp  Parallelization.cpp
src/gui/: AbstractViewer.cpp  Camera.cpp  GLBuffer.cpp  GLShader.cpp  GLVertexArray.cpp
src/math/: BoundingBox.cpp  LeastSquaresSystem.cpp  Morton.cpp
src/util/: GLDebug.cpp  IndentationLog.cpp  TimedBlock.cpp  Timer.cpp  UnionFind.cpp
